--- a/main.html
+++ b/main.html
@@ -4,5 +4,20 @@
   </head>
   <body>
     <!-- Write your code here -->
+	  <div class="container">
+	   <form id="signup-form">
+           <label for="name">Name</label>
+           <input type="text" id="name" required><br><br>
+            <label for="email">Email</label>
+            <input type="email" id="email" required><br><br>
+            <label for="password">Password</label>
+            <input type="password" id="password" required><br><br>
+            <label for="confirm-password">Confirm Password</label>
+            <input type="password" id="confirm-password" required><br><br>
+            <button id="submit" type="submit" ">Sign Up</button>
+        </form>
+		  <div id="session-storage"> </div>
+	  </div>
+	  
   </body>
 </html>
